--- a/galery.html
+++ b/galery.html
@@ -11,12 +11,59 @@
 </head>
 <body>
     <div class="topnav" id="myTopnav">
-        <a href="index.html">Home</a>
+        <a href="index.html" >Home</a>
         <a href="galery.html" class="active">Galéria</a>
         <a href="info.html">Információk</a>
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
         </a>
+    </div>
+
+    <div id="kepek">
+
+      <img class="galleryimg" src="pics/gallery/kep (1).jpg" alt="" onclick="onClick(this)">
+      <img class="galleryimg" src="pics/gallery/kep (2).jpg" alt="" onclick="onClick(this)">
+      <img class="galleryimg" src="pics/gallery/kep (3).jpg" alt="" onclick="onClick(this)">
+      <img class="galleryimg" src="pics/gallery/kep (4).jpg" alt="" onclick="onClick(this)">
+      <img class="galleryimg" src="pics/gallery/kep (5).jpg" alt="" onclick="onClick(this)">
+      <img class="galleryimg" src="pics/gallery/kep (6).jpg" alt="" onclick="onClick(this)">
+      <img class="galleryimg" src="pics/gallery/kep (7).jpg" alt="" onclick="onClick(this)">
+      <img class="galleryimg" src="pics/gallery/kep (8).jpg" alt="" onclick="onClick(this)">
+      <img class="galleryimg" src="pics/gallery/kep (9).jpg" alt="" onclick="onClick(this)">
+      <img class="galleryimg" src="pics/gallery/kep (10).jpg" alt="" onclick="onClick(this)">
+      <img class="galleryimg" src="pics/gallery/kep (11).jpg" alt="" onclick="onClick(this)">
+      <img class="galleryimg" src="pics/gallery/kep (12).jpg" alt="" onclick="onClick(this)">
+      <img class="galleryimg" src="pics/gallery/kep (13).jpg" alt="" onclick="onClick(this)">
+      <img class="galleryimg" src="pics/gallery/kep (14).jpg" alt="" onclick="onClick(this)">
+      <img class="galleryimg" src="pics/gallery/kep (15).jpg" alt="" onclick="onClick(this)">
+      <img class="galleryimg" src="pics/gallery/kep (16).jpg" alt="" onclick="onClick(this)">
+      <img class="galleryimg" src="pics/gallery/kep (17).jpg" alt="" onclick="onClick(this)">
+      <img class="galleryimg" src="pics/gallery/kep (18).jpg" alt="" onclick="onClick(this)">
+      <img class="galleryimg" src="pics/gallery/kep (19).jpg" alt="" onclick="onClick(this)">
+      <img class="galleryimg" src="pics/gallery/kep (20).jpg" alt="" onclick="onClick(this)">
+      <img class="galleryimg" src="pics/gallery/kep (21).jpg" alt="" onclick="onClick(this)">
+      <img class="galleryimg" src="pics/gallery/kep (22).jpg" alt="" onclick="onClick(this)">
+      <img class="galleryimg" src="pics/gallery/kep (23).jpg" alt="" onclick="onClick(this)">
+      <img class="galleryimg" src="pics/gallery/kep (24).jpg" alt="" onclick="onClick(this)">
+      <img class="galleryimg" src="pics/gallery/kep (25).jpg" alt="" onclick="onClick(this)">
+      <img class="galleryimg" src="pics/gallery/kep (26).jpg" alt="" onclick="onClick(this)">
+      <img class="galleryimg" src="pics/gallery/kep (27).jpg" alt="" onclick="onClick(this)">
+      <img class="galleryimg" src="pics/gallery/kep (28).jpg" alt="" onclick="onClick(this)">
+      <img class="galleryimg" src="pics/gallery/kep (29).jpg" alt="" onclick="onClick(this)">
+      <img class="galleryimg" src="pics/gallery/kep (31).jpg" alt="" onclick="onClick(this)">
+      <img class="galleryimg" src="pics/gallery/kep (32).jpg" alt="" onclick="onClick(this)">
+      <img class="galleryimg" src="pics/gallery/kep (33).jpg" alt="" onclick="onClick(this)">
+      <img class="galleryimg" src="pics/gallery/kep (34).jpg" alt="" onclick="onClick(this)">
+      <img class="galleryimg" src="pics/gallery/kep (35).jpg" alt="" onclick="onClick(this)">
+    </div>
+
+
+    <script src="app.js"></script>
+    <div id="modal01" class="modal" onclick="this.style.display='none'">
+      <span class="close">&times;&nbsp;&nbsp;&nbsp;&nbsp;</span>
+      <div class="modal-content">
+        <img id="img01" style="max-width:100%">
       </div>
+    </div>
 </body>
 </html>
