--- a/galery.html
+++ b/galery.html
@@ -11,9 +11,10 @@
 </head>
 <body>
     <div class="topnav" id="myTopnav">
+        <a href="info.html" id="login">Bejelentkezés</a>
         <a href="index.html" >Home</a>
         <a href="galery.html" class="active">Galéria</a>
-        <a href="info.html">Információk</a>
+
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
         </a>
@@ -54,7 +55,6 @@
       <img class="galleryimg" src="pics/gallery/kep (32).jpg" alt="" onclick="onClick(this)">
       <img class="galleryimg" src="pics/gallery/kep (33).jpg" alt="" onclick="onClick(this)">
       <img class="galleryimg" src="pics/gallery/kep (34).jpg" alt="" onclick="onClick(this)">
-      <img class="galleryimg" src="pics/gallery/kep (35).jpg" alt="" onclick="onClick(this)">
     </div>
 
 
