--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
 </head>
 <body>
     <div class="topnav" id="myTopnav">
+        <a href="info.html" id="login">Bejelentkezés</a>
         <a href="index.html" class="active">Home</a>
         <a href="galery.html">Galéria</a>
-        <a href="info.html">Információk</a>
+
         <a href="javascript:void(0);" class="icon" onclick="myFunction()">
           <i class="fa fa-bars"></i>
         </a>
@@ -26,7 +27,7 @@
     <section id="section1"> <!--------------------BANNER--------------------->
     <div class="container">
         <img src="pics/banner2.jpg" alt="Snow" style="width:100.02%;" id="banner">
-        <div class="centered"><h1>Üdv a 8.a Weboldalán</h1>
+        <div class="centered"><h1>Üdvözöllek a 8.a Weboldalán</h1>
         <br><br><br><a href="#section2"><svg id="sd" width="3vw" height="100%" viewBox="0 0 247 390" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" style="fill-rule:evenodd;clip-rule:evenodd;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:1.5;">
             <path id="wheel" d="M123.359,79.775l0,72.843" style="fill:none;stroke:#fff;stroke-width:20px;"/>
             <path id="mouse" d="M236.717,123.359c0,-62.565 -50.794,-113.359 -113.358,-113.359c-62.565,0 -113.359,50.794 -113.359,113.359l0,143.237c0,62.565 50.794,113.359 113.359,113.359c62.564,0 113.358,-50.794 113.358,-113.359l0,-143.237Z" style="fill:none;stroke:#fff;stroke-width:20px;"/>
@@ -78,5 +79,22 @@
         <a href="https://refi-tata.hu/">Tatai Református Gimnázium:</a><br><br>
       </p></div>
     </div>
+    <script>  const observer = new IntersectionObserver((entries) => {
+      entries.forEach((entry) => {
+        if (entry.isIntersecting) {
+          entry.target.classList.add('show');
+          entry.target.classList.add('show1');
+          entry.target.classList.add('sstack');
+        } else {
+          entry.target.classList.remove('show');
+          entry.target.classList.remove('show1');
+          entry.target.classList.remove('sstack');
+        }
+      });
+    });
+    
+    const hiddenElements = document.querySelectorAll('.hidden, .hidden1, .hstack');
+    hiddenElements.forEach((el) => observer.observe(el));
+  </script>
 </body>
 </html>
